@@ -1,15 +1,15 @@
 Begin4
 Title: procps
 Version: 3.1.6
-Entered-date: 2002-12-14
+Entered-date: 2003-2-17
 Description: Linux system utilities
 Keywords: procps /proc libproc sysctl pmap
 	ps uptime tload free w top vmstat watch skill snice kill pgrep pkill
 Author: Albert Cahalan, Michael K. Johnson, Jim Warner, etc.
 Maintained-by: various <procps-feedback@lists.sf.net>
 Primary-site: http://procps.sf.net/
-	236kB procps-3.1.6.tar.gz
+	238kB procps-3.1.6.tar.gz
 Alternate-site: http://www.debian.org/Packages/unstable/base/procps.html
-	236kB procps-3.1.6.tar.gz
+	238kB procps-3.1.6.tar.gz
 Copying-policy: mixed
 End
